--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@angular/cdk": "~20.3.0",
+    "@angular/cdk": "^21.0.1",
     "@angular/common": "~20.3.0",
     "@angular/compiler": "~20.3.0",
     "@angular/core": "~20.3.0",
