--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "@task-sys/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run-many --target=serve --all --parallel",
+    "start:api": "nx serve api",
+    "start:dashboard": "nx serve dashboard",
+    "lint": "nx run-many --target=lint --all --parallel",
+    "test": "nx run-many --target=test --all --parallel"
+  },
   "private": true,
   "devDependencies": {
     "@angular-devkit/core": "~20.3.0",
     "@angular-devkit/schematics": "~20.3.0",
     "@angular/build": "~20.3.0",
-    "@angular/cli": "~20.3.0",
+    "@angular/cli": "^19.2.19",
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
     "@eslint/js": "^9.8.0",
@@ -55,7 +61,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@angular/cdk": "^21.0.1",
+    "@angular/cdk": "^20.0.0",
     "@angular/common": "~20.3.0",
     "@angular/compiler": "~20.3.0",
     "@angular/core": "~20.3.0",
